# CS211HW4

./: CMakeLists.txt  frag.txt  fragA.txt  fragG.txt  fragP.txt  main.cpp  mymath.h  opengl4_4.vcxproj  opengl4_4.vcxproj.filters  tiny_obj_loader.cpp  vertex.txt  vertexA.txt  vertexG.txt  vertexP.txt
Debug/: opengl4_4.exe.recipe  opengl4_4.ilk  opengl4_4.vcxproj.FileListAbsolute.txt
Debug/opengl4_4.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl4_4.lastbuildstate
Release/: opengl4_4.exe.recipe  opengl4_4.iobj  opengl4_4.ipdb  opengl4_4.lastbuildstate  opengl4_4.vcxproj.FileListAbsolute.txt
Release/opengl4_4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl4_4.lastbuildstate  opengl4_4.write.1u.tlog
